# NVIDIA___nvcf

./: .bazelignore  .bazelrc  .coderabbit.yaml  .gitignore  .rumdl.toml  AGENTS.md  BAZEL.md  BUILD.bazel  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MODULE.bazel  NOTICE  README.md  dependencies.md  go.work.bazel  license-compliance.md  maven_install.json
examples/java-spring-boot-service/: BUILD.bazel  README.md
rules/oci-destinations/: BUILD.bazel  MODULE.bazel  pushes.bzl
src/clis/nvcf-cli/: .allowed-licenses.txt  .gitattributes  .gitignore  .nvcf-cli.yaml.template  .oss-allowlist  BUILD.bazel  CONTRIBUTING.md  LICENSE  Makefile  NOTICE  README.md  USAGE-GUIDE.md  add-copyright.sh  go.mod  go.sum  main.go  run_tests.sh  test-requirements.txt
src/clis/nvcf-cli/cmd/: BUILD.bazel  admin.go  admin_test.go  agent_skill.go  agent_skill_test.go  apikey.go  assets.go  cluster.go  cluster_agent.go  cluster_agent_maintenance.go  cluster_agent_maintenance_test.go  cluster_agent_test.go  cluster_agent_validate.go  cluster_agent_validate_test.go  cluster_registration.go  cluster_registration_test.go  cluster_utils.go  deploy.go  exit_code_error.go  exit_code_error_test.go  function.go  function_llm_model_test.go  init.go  json_output.go  main_test.go  refresh.go  registry.go  registry_test.go  root.go  root_test.go  self_hosted.go  self_hosted_check.go  self_hosted_check_test.go  self_hosted_compute_plane.go  self_hosted_compute_plane_test.go  self_hosted_control_plane.go  self_hosted_control_plane_profile.go  self_hosted_control_plane_test.go  self_hosted_down.go  self_hosted_down_test.go  (+13 more)
src/clis/nvcf-cli/examples/: config-dev.yaml  config-prod.yaml  create-function-advanced-health.json  create-function-full-health.json  create-function-helm-nvcf-test-func.json  create-function-with-advanced-features.json  create-function-with-secret-values-fixed.json  create-function-with-secrets.json  create-function.json  create-llm-function-routing-method.json  delete-deployment.json  delete-function.json  deploy-function-helm.json  deploy-function.json  deploy.json  invoke-function-grpc.json  invoke-function.json  multi-token-config.yaml  test-multi-token.sh  update-deployment.json  update-metadata.json
src/clis/nvcf-cli/scripts/: install-agent-skill.sh
src/clis/nvcf-cli/tests/: test_function_lifecycle.py
src/compute-plane-services/byoo-otel-collector/: .bazelrc  .dockerignore  .gitignore  .goheader.tmpl  .golangci.yml  .pre-commit-config.yaml  .yamllint  AGENTS.md  BUILD.bazel  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.nvcf-otel-collector  LICENSE  MODULE.bazel  Makefile  NOTICE  README.md  VERSION  go.mod  go.sum  otel-collector-build.yaml
src/compute-plane-services/byoo-otel-collector/.github/: pull_request_template.md
src/compute-plane-services/byoo-otel-collector/generator/: README.md  generator.py  markdown_helper.py  pyproject.toml  source-config.yaml  template_helper.py
src/compute-plane-services/byoo-otel-collector/otelcol/: BUILD.bazel
src/compute-plane-services/byoo-otel-collector/scripts/: generate-otelconfig.go  start-generator.sh  update-collector-version.sh  update-examples.sh  validate-otelconfig.sh
src/compute-plane-services/ess-agent/: .copywrite.hcl  .gitignore  AGENTS.md  BUILD.bazel  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  KNOWN_TEST_ISSUES.md  MODULE.bazel  Makefile  NOTICE  README.md  cli.go  cli_test.go  flags.go  go.mod  go.sum  image_entrypoint_mode_test.sh  main.go  main_test.go  mpl-files-modified.md
src/compute-plane-services/ess-agent/api/: auth.go  (+53 more)
src/compute-plane-services/image-credential-helper/: .bazelignore  .bazelrc  .gitignore  .golangci.yml  AGENTS.md  BUILD.bazel  CONTRIBUTING.md  MODULE.bazel  Makefile  README.md  RELEASING.md  go.mod  go.sum
src/compute-plane-services/nvca/: .allowed-licenses.txt  .bazelrc  .gitignore  .golangci.yml  .goreleaser.yaml  .license-baseline.txt  AGENTS.md  BUILD.bazel  CONTRIBUTING.md  MODULE.bazel  Makefile  README.md  RELEASE.md  go.mod  go.sum  sonar-project.properties
src/compute-plane-services/nvcf-unbound/: .bazelignore  .bazelrc  .gitignore  .golangci.yml  BUILD.bazel  MODULE.bazel  Makefile  go.mod  go.sum  install.sh
src/compute-plane-services/nvsnap/: .bazelrc  .dockerignore  .gitattributes  .gitignore  .golangci.yml  BUILD.bazel  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MODULE.bazel  Makefile  NOTICE  README.md  SECURITY.md  go.mod  go.sum
src/compute-plane-services/worker-task/: .bazelrc  BUILD.bazel  MODULE.bazel  README.md  go.mod  go.sum
src/control-plane-services/function-autoscaler/: .bazelrc  .gitignore  AGENTS.md  BUILD.bazel  Cargo.toml  MODULE.bazel  README.md  build.bat  build.sh  deny.toml  rust-toolchain.toml  rustfmt.toml
src/control-plane-services/helm-reval/: .bazelignore  .bazelrc  .dockerignore  .gitignore  .golangci.yml  .license-baseline.txt  .oss-allowlist  BUILD.bazel  MODULE.bazel  Makefile  README.md  go.mod  go.sum
src/invocation-plane-services/grpc-proxy/: .dockerignore  .gitignore  AGENTS.md  BUILD.bazel  CONTRIBUTING.md  Dockerfile  MODULE.bazel  NOTICE  README.md  add-copyright.sh  go.mod  go.sum  main.go  main_test.go
src/invocation-plane-services/http-invocation/: .gitignore  AGENTS.md  Cargo.toml  MODULE.bazel  README.md  deny.toml  rust-toolchain.toml
src/invocation-plane-services/llm-api-gateway/: .bazelrc  AGENTS.md  BUILD.bazel  Dockerfile  MODULE.bazel  README.md
src/invocation-plane-services/llm-gateway/: .dockerignore  .gitattributes  .gitignore  AGENTS.md  BUILD.bazel  CONTRIBUTING.md  Dockerfile  LICENSE  NOTICE  README.md  go.mod  go.sum
src/invocation-plane-services/ratelimiter/: .bazelignore  .bazelrc  .dockerignore  .gitignore  AGENTS.md  BUILD.bazel  CONTRIBUTING.md  LICENSE  MODULE.bazel  NOTICE  README.md  go.mod  go.sum  nvcf_client.go  nvcf_client_test.go  olric_k8s.go  olric_stats.go  olric_store.go  rate_limiter.go  rate_limiter_test.go  version.go  version_test.go
src/invocation-plane-services/vanity-gateway/: BUILD.bazel  MODULE.bazel  README.md  go.mod  go.sum  image_entrypoint_mode_test.sh  main.go
(+4619 files in other folders)
