# SPDX-FileCopyrightText: Copyright (c) NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@gazelle//:def.bzl", "gazelle")

exports_files(
    ["BUILD.bazel"],
    visibility = ["//src/libraries/go/lib:__pkg__"],
)

# Phase 1 scope: only the native Go subtrees listed in go.work.bazel are
# managed by Bazel.
# Everything else is excluded so Gazelle does not descend into vendored
# directories of upstream-owned subtrees. Their source is owned upstream, and
# local-only changes would be clobbered by the next commit-pin refresh.
#
# When promoting an upstream to native (Phase B), remove the corresponding
# exclude line below and add a per-subtree BUILD.bazel with the right prefix.
# gazelle:exclude .bazel-cache
# gazelle:exclude .worktrees
# gazelle:exclude .cursor
# gazelle:exclude .claude
# gazelle:exclude .codex
# gazelle:exclude ai-tooling
# gazelle:exclude bazel-bin
# gazelle:exclude bazel-nvcf
# gazelle:exclude bazel-out
# gazelle:exclude bazel-testlogs
# gazelle:exclude ci
# gazelle:exclude deploy
# gazelle:exclude docs
# gazelle:exclude examples
# gazelle:exclude fern
# gazelle:exclude infra
# gazelle:exclude migrations
# gazelle:exclude platforms
# gazelle:exclude rules
# gazelle:exclude src/compute-plane-services
# gazelle:exclude src/control-plane-services
# gazelle:exclude src/invocation-plane-services
# gazelle:exclude src/libraries/python
# gazelle:exclude src/libraries/ts
# gazelle:exclude tools

# Gazelle: auto-generate BUILD files for Go packages.
# Usage:
#   bazel run //:gazelle                     - generate or update BUILD files
#   bazel run //:gazelle -- update-repos     - sync go.mod deps into MODULE.bazel
gazelle(
    name = "gazelle",
    prefix = "github.com/NVIDIA/nvcf",
)
