// SPDX-FileCopyrightText: Copyright (c) NVIDIA CORPORATION & AFFILIATES. All rights reserved.
// SPDX-License-Identifier: Apache-2.0
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

// Phase 1 Bazel-scope go workspace.
//
// Only lists the native Go subtrees that Bazel currently builds:
//   - src/clis/nvcf-cli
//   - src/libraries/go/lib
//   - src/libraries/go/worker
//
// The repo also has a generated go.work (gitignored) used by the existing
// non-Bazel CI for license/dependency checks across all 31 go.mod files.
// Bazel deliberately uses a narrower scope to avoid pulling in deps for
// upstream-owned subtrees that are out of scope for Phase 1.
go 1.25.0

use (
	./src/clis/nvcf-cli
	./src/libraries/go/lib
	./src/libraries/go/worker
)
