# SPDX-FileCopyrightText: Copyright (c) NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# Reference Spring Boot service. Doubles as the template a new Java service
# copies: a java_library for the app, nvcf_spring_boot_image for the multi-arch
# container, and a JUnit 5 test. To publish images, add a registry = ... to the
# image target and a release: block in tools/ci/subproject-validations.yaml
# (see the grpc-proxy entry). See README.md for the nv-boot / internal Maven
# wiring a real service adds.

load("@contrib_rules_jvm//java:defs.bzl", "java_junit5_test")
load("//rules/java:defs.bzl", "nvcf_java_library", "nvcf_spring_boot_image")

nvcf_java_library(
    name = "example_lib",
    srcs = glob(["src/main/java/**/*.java"]),
    visibility = ["//visibility:public"],
    # The starter carries the full runtime (embedded Tomcat, Jackson, ...);
    # the concrete artifacts below are the ones the code imports directly, so
    # the strict-deps header compiler sees them on the direct classpath.
    deps = [
        "@maven//:org_springframework_boot_spring_boot",
        "@maven//:org_springframework_boot_spring_boot_autoconfigure",
        "@maven//:org_springframework_boot_spring_boot_starter_web",
        "@maven//:org_springframework_spring_web",
    ],
)

# Multi-arch OCI image: :image (host arch), :image_index (amd64 + arm64),
# :image_load (docker load), :image.tar. A registry = ... would also emit
# :image_push. Tagged "manual", so bazel build //... skips it; the CI entry
# builds :image_index explicitly.
nvcf_spring_boot_image(
    name = "image",
    main_class = "com.nvidia.nvcf.example.ExampleApplication",
    visibility = ["//visibility:public"],
    deps = [":example_lib"],
)

java_junit5_test(
    name = "hello_controller_test",
    srcs = ["src/test/java/com/nvidia/nvcf/example/HelloControllerTest.java"],
    test_class = "com.nvidia.nvcf.example.HelloControllerTest",
    runtime_deps = [
        "@maven//:org_junit_jupiter_junit_jupiter_engine",
        "@maven//:org_junit_platform_junit_platform_launcher",
        "@maven//:org_junit_platform_junit_platform_reporting",
    ],
    deps = [
        ":example_lib",
        "@maven//:org_junit_jupiter_junit_jupiter_api",
    ],
)

# Boots the full Spring context and hits /hello through MockMvc. This is the
# test that actually exercises the exploded-classpath design: starting the
# context reads each dependency jar's auto-configuration metadata, so a broken
# classpath assembly fails here where the plain unit test above cannot.
java_junit5_test(
    name = "hello_controller_web_test",
    srcs = ["src/test/java/com/nvidia/nvcf/example/HelloControllerWebTest.java"],
    test_class = "com.nvidia.nvcf.example.HelloControllerWebTest",
    runtime_deps = [
        "@maven//:org_junit_jupiter_junit_jupiter_engine",
        "@maven//:org_junit_platform_junit_platform_launcher",
        "@maven//:org_junit_platform_junit_platform_reporting",
    ],
    deps = [
        ":example_lib",
        "@maven//:org_junit_jupiter_junit_jupiter_api",
        "@maven//:org_springframework_boot_spring_boot_test",
        "@maven//:org_springframework_boot_spring_boot_test_autoconfigure",
        "@maven//:org_springframework_spring_beans",
        "@maven//:org_springframework_spring_test",
    ],
)
