# SPDX-FileCopyrightText: Copyright (c) NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

"""Bzlmod module definition for ess-agent.

ess-agent is NVIDIA's fork of HashiCorp consul-template. Single Go
binary at the repo root (main.go) plus the vendored hashicorp/vault
api + sdk subtrees (./api and ./sdk via `replace` directives in
go.mod). No private NVIDIA modules; deps resolve via Gazelle's go_deps
extension from go.mod.

The umbrella nvcf/nvcf consumes this subtree under
src/compute-plane-services/ess-agent; this file is also picked up there but the
umbrella's own root MODULE.bazel is what Bazel uses end-to-end.
"""

module(
    name = "ess_agent",
    version = "0.0.1",
)

# ============================================================================
# OCI containers (multi-arch). Mirrors the umbrella's MODULE.bazel.
# ============================================================================
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "rules_oci", version = "2.2.7")
bazel_dep(name = "rules_pkg", version = "1.2.0")
bazel_dep(name = "aspect_bazel_lib", version = "2.19.3")
bazel_dep(name = "hermetic_cc_toolchain", version = "4.1.0")

# rules_pkg's `pkg_tar` runs through a Python builder, which pulls in
# rules_python's hermetic interpreter. CI runs as root in the bazel-ci
# container, and rules_python rejects root-user setup by default.
bazel_dep(name = "rules_python", version = "1.4.1")

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    ignore_root_user_error = True,
    python_version = "3.11",
)

# ============================================================================
# Go
# ============================================================================
bazel_dep(name = "rules_go", version = "0.60.0")
bazel_dep(name = "gazelle", version = "0.48.0")

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.25.6")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_work = "//:go.work")

# Auto-managed by `bazel mod tidy`. Re-run after adding or removing
# imports.
use_repo(
    go_deps,
    "com_github_armon_go_metrics",
    "com_github_armon_go_radix",
    "com_github_burntsushi_toml",
    "com_github_cenkalti_backoff_v3",
    "com_github_davecgh_go_spew",
    "com_github_evanphx_json_patch_v5",
    "com_github_fatih_structs",
    "com_github_go_jose_go_jose_v4",
    "com_github_go_ldap_ldap_v3",
    "com_github_go_test_deep",
    "com_github_golang_protobuf",
    "com_github_golang_snappy",
    "com_github_hashicorp_consul_api",
    "com_github_hashicorp_consul_sdk",
    "com_github_hashicorp_errwrap",
    "com_github_hashicorp_go_cleanhttp",
    "com_github_hashicorp_go_gatedio",
    "com_github_hashicorp_go_hclog",
    "com_github_hashicorp_go_immutable_radix",
    "com_github_hashicorp_go_kms_wrapping_entropy_v2",
    "com_github_hashicorp_go_multierror",
    "com_github_hashicorp_go_plugin",
    "com_github_hashicorp_go_retryablehttp",
    "com_github_hashicorp_go_rootcerts",
    "com_github_hashicorp_go_secure_stdlib_base62",
    "com_github_hashicorp_go_secure_stdlib_mlock",
    "com_github_hashicorp_go_secure_stdlib_parseutil",
    "com_github_hashicorp_go_secure_stdlib_password",
    "com_github_hashicorp_go_secure_stdlib_strutil",
    "com_github_hashicorp_go_secure_stdlib_tlsutil",
    "com_github_hashicorp_go_sockaddr",
    "com_github_hashicorp_go_syslog",
    "com_github_hashicorp_go_uuid",
    "com_github_hashicorp_go_version",
    "com_github_hashicorp_golang_lru",
    "com_github_hashicorp_hcl",
    "com_github_hashicorp_logutils",
    "com_github_hashicorp_nomad_api",
    "com_github_hashicorp_vault_api",
    "com_github_hashicorp_vault_api_auth_kubernetes",
    "com_github_hashicorp_vault_sdk",
    "com_github_imdario_mergo",
    "com_github_masterminds_sprig_v3",
    "com_github_mitchellh_copystructure",
    "com_github_mitchellh_go_homedir",
    "com_github_mitchellh_go_testing_interface",
    "com_github_mitchellh_hashstructure",
    "com_github_mitchellh_mapstructure",
    "com_github_pierrec_lz4",
    "com_github_pkg_errors",
    "com_github_prometheus_client_golang",
    "com_github_ryanuber_go_glob",
    "com_github_stretchr_testify",
    "in_gopkg_yaml_v2",
    "io_opentelemetry_go_otel",
    "io_opentelemetry_go_otel_exporters_prometheus",
    "io_opentelemetry_go_otel_exporters_stdout_stdoutmetric",
    "io_opentelemetry_go_otel_metric",
    "io_opentelemetry_go_otel_sdk",
    "io_opentelemetry_go_otel_sdk_metric",
    "org_golang_google_grpc",
    "org_golang_google_protobuf",
    "org_golang_x_crypto",
    "org_golang_x_exp",
    "org_golang_x_net",
    "org_golang_x_sys",
    "org_golang_x_text",
    "org_golang_x_time",
    "org_uber_go_atomic",
)

# ============================================================================
# C++ cross-compilation (multi-arch container builds).
# ============================================================================
zig = use_extension("@hermetic_cc_toolchain//toolchain:ext.bzl", "toolchains")
use_repo(zig, "zig_sdk")

register_toolchains(
    "@zig_sdk//toolchain:linux_arm64_gnu.2.38",
)

# ============================================================================
# OCI base image. ess-agent's legacy Dockerfile uses alpine:latest; for
# Bazel we use the same hardened distroless/go that other Phase B Go
# services use. Drops apk + shell from the image footprint.
# ============================================================================
oci = use_extension("@rules_oci//oci:extensions.bzl", "oci")
oci.pull(
    name = "distroless_go",
    digest = "sha256:2ae1c3f90de1735fefb2a951977b7e78aa1c691f345d58c87b0d6bb7eff4f4d5",
    image = "nvcr.io/nvidia/distroless/go",
    platforms = [
        "linux/amd64",
        "linux/arm64/v8",
    ],
)
use_repo(
    oci,
    "distroless_go",
    "distroless_go_linux_amd64",
    "distroless_go_linux_arm64_v8",
)
